tests/snapshots/tui_snapshots__install_preview_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
expression: "normalize_install_screen(&temporary, render(&app, 80, 24))"
---
 ◆ skilled   global                               ● ready · 1 source registered
 1┌ Install skill ────────────────────────────────────── nothing written yet ┐
▌ │                                                                          │
──│  Skill: portable                                                         │──
sk│  From: src · skills                                                      │ts
▌ │  Links to: [CANONICAL]           /src/skills/portable                    │
  │                                                                          │
  │  Targets                                                                 │
  │  ✓ Claude Code: create the skill root, then the link                     │
  │      [TEMP]        /home/.claude/skills/portable                         │
  │  ✓ Codex: create the skill root, then the link                           │
  │      [TEMP]        /home/.agents/skills/portable                         │
  │  ✓ OpenCode: create the skill root, then the link                        │
  │      [TEMP]        /home/.config/opencode/skills/portable                │
  │                                                                          │
  │  Home: [TEMP]        /home                                               │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  3 links to create                           Enter Install   Esc Cancel  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
 Enter Install   Esc Cancel   Ctrl-C Quit
