tests/snapshots/tui_snapshots__install_preview_at_wide_size.snap
---
source: tests/tui_snapshots.rs
expression: "normalize_install_screen(&temporary, render(&app, 120, 40))"
---
 ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
▕                                                                                                                      ▏
▕ ◆┌ Install skill ──────────────────────────────────────────────────────────────────────────── nothing written yet ┐d ▏
▕▁▁│                                                                                                                │▁▁▏
▕  │  Skill: portable                                                                                               │  ▏
▕ 1│  From: src · skills                                                                                            │  ▏
▕▁▁│  Links to: [CANONICAL]                 /src/skills/portable                                                    │▁▁▏
▕  │                                                                                                                │  ▏
▕──│  Targets                                                                                                       │─ ▏
▕▌ │  ✓ Claude Code: create the skill root, then the link                                                           │  ▏
▕▌ │      [TEMP]                      /home/.claude/skills/portable                                                 │─ ▏
▕▌ │  ✓ Codex: create the skill root, then the link                                                                 │  ▏
▕  │      [TEMP]                      /home/.agents/skills/portable                                                 │c ▏
▕  │  ✓ OpenCode: create the skill root, then the link                                                              │  ▏
▕  │      [TEMP]                      /home/.config/opencode/skills/portable                                        │  ▏
▕  │                                                                                                                │  ▏
▕  │  Home: [TEMP]                      /home                                                                       │C ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │─ ▏
▕  │                                                                                                                │n ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │─ ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │  ────────────────────────────────────────────────────────────────────────────────────────────────────────────  │  ▏
▕  │  3 links to create                                                                 Enter Install   Esc Cancel  │  ▏
▕  │                                                                                                                │  ▏
▕  └────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  ▏
▕ Enter Install   Esc Cancel   Ctrl-C Quit                                                                             ▏
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
