tests/snapshots/tui_snapshots__install_preview_blocked_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
expression: "normalize_install_screen(&temporary, render(&app, 80, 24))"
---
 ◆ skilled   global                               ● ready · 1 source registered
 1┌ Install skill ────────────────────────────────────── nothing written yet ┐
▌ │                                                                          │
──│  Skill: portable                                                         │──
sk│  From: src · skills                                                      │ts
▌ │  Links to: [CANONICAL]                 /src/skills/portable              │
  │                                                                          │
  │  Targets                                                                 │
  │  - Claude Code: would create the skill root, then the link               │
  │      [TEMP]                      /home/.claude/skills/portable           │
  │      nothing will be written here: this plan is blocked                  │
  │  × Codex: install.physical_path_collision                                │
  │      [TEMP]                      /home/.agents/skills/portable           │
  │      a file is already there. Skilled never overwrites one, whatever it  │
  │      holds                                                               │
  │  - OpenCode: would create the skill root, then the link                  │
  │      [TEMP]                      /home/.config/opencode/skills/portable  │
  │      nothing will be written here: this plan is blocked                  │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Blocked — nothing will be written · more below               Esc Close  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
 j/k Scroll   Esc Close   Ctrl-C Quit
