tests/snapshots/tui_snapshots__install_report_at_wide_size.snap
---
source: tests/tui_snapshots.rs
expression: "normalize_install_screen(&temporary, render(&app, 120, 40))"
---
 ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
▕                                                                                                                      ▏
▕ ◆┌ Install result ─────────────────────────────────────────────────────────────────────────────── already applied ┐d ▏
▕▁▁│                                                                                                                │▁▁▏
▕  │  Skill: portable                                                                                               │  ▏
▕ 1│  Links to: [CANONICAL]                 /src/skills/portable                                                    │  ▏
▕▁▁│                                                                                                                │▁▁▏
▕  │  Steps                                                                                                         │  ▏
▕──│  ✓ Claude Code: link created                                                                                   │─ ▏
▕▌ │      [TEMP]                      /home/.claude/skills/portable                                                 │  ▏
▕▌ │  ✓ Codex: link created                                                                                         │─ ▏
▕▌ │      [TEMP]                      /home/.agents/skills/portable                                                 │  ▏
▕  │  ✓ OpenCode: link created                                                                                      │c ▏
▕  │      [TEMP]                      /home/.config/opencode/skills/portable                                        │  ▏
▕  │                                                                                                                │  ▏
▕  │  Verification                                                                                                  │  ▏
▕  │  ✓ every link written was observed again and matches this plan                                                 │C ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │─ ▏
▕  │                                                                                                                │n ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │─ ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │  ────────────────────────────────────────────────────────────────────────────────────────────────────────────  │  ▏
▕  │  Installed and verified                                                                             Esc Close  │  ▏
▕  │                                                                                                                │  ▏
▕  └────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  ▏
▕ Esc Close   Ctrl-C Quit                                                                                              ▏
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
