tests/snapshots/tui_snapshots__install_report_with_a_residual_root_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
expression: "normalize_install_screen(&temporary, render(&app, 80, 24))"
---
 ◆ skilled   global                               ● ready · 1 source registered
 1┌ Install result ───────────────────────────────────────── already applied ┐
▌ │                                                                          │
──│  Skill: portable                                                         │──
sk│  Links to: [CANONICAL]                 /src/skills/portable              │ts
▌ │                                                                          │
  │  Steps                                                                   │
  │  × Claude Code: skill root created, but the link was not: Permission     │
  │  denied (os error 13)                                                    │
  │      [TEMP]                      /home/.claude/skills/portable           │
  │  U Codex: not attempted, because an earlier step stopped the run         │
  │      [TEMP]                      /home/.agents/skills/portable           │
  │  U OpenCode: not attempted, because an earlier step stopped the run      │
  │      [TEMP]                      /home/.config/opencode/skills/portable  │
  │                                                                          │
  │  Verification                                                            │
  │  ✓ every link written was observed again and matches this plan           │
  │                                                                          │
  │  Skilled does not undo what it wrote. Nothing above was removed, and no  │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Partly applied · more below                                  Esc Close  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
 j/k Scroll   Esc Close   Ctrl-C Quit
