tests/snapshots/tui_snapshots__install_report_with_a_residual_root_at_wide_size.snap
---
source: tests/tui_snapshots.rs
expression: "normalize_install_screen(&temporary, render(&app, 120, 40))"
---
 ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
▕                                                                                                                      ▏
▕ ◆┌ Install result ─────────────────────────────────────────────────────────────────────────────── already applied ┐d ▏
▕▁▁│                                                                                                                │▁▁▏
▕  │  Skill: portable                                                                                               │  ▏
▕ 1│  Links to: [CANONICAL]                 /src/skills/portable                                                    │  ▏
▕▁▁│                                                                                                                │▁▁▏
▕  │  Steps                                                                                                         │  ▏
▕──│  × Claude Code: skill root created, but the link was not: Permission denied (os error 13)                      │─ ▏
▕▌ │      [TEMP]                      /home/.claude/skills/portable                                                 │  ▏
▕▌ │  U Codex: not attempted, because an earlier step stopped the run                                               │─ ▏
▕▌ │      [TEMP]                      /home/.agents/skills/portable                                                 │  ▏
▕  │  U OpenCode: not attempted, because an earlier step stopped the run                                            │c ▏
▕  │      [TEMP]                      /home/.config/opencode/skills/portable                                        │  ▏
▕  │                                                                                                                │  ▏
▕  │  Verification                                                                                                  │  ▏
▕  │  ✓ every link written was observed again and matches this plan                                                 │C ▏
▕  │                                                                                                                │  ▏
▕  │  Skilled does not undo a partial install automatically; uninstall is a separate confirmed operation, and       │─ ▏
▕  │  repair only replaces a still-present link whose ownership can be proven.                                      │n ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │─ ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │  ────────────────────────────────────────────────────────────────────────────────────────────────────────────  │  ▏
▕  │  Partly applied                                                                                     Esc Close  │  ▏
▕  │                                                                                                                │  ▏
▕  └────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  ▏
▕ Esc Close   Ctrl-C Quit                                                                                              ▏
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
