tests/snapshots/tui_snapshots__inventory_empty_state_at_wide_size.snap
---
source: tests/tui_snapshots.rs
assertion_line: 61
expression: "render(&app, 120, 40)"
---
 ◆ skilled   global                                                                      ● ready · 0 sources registered
▌1 Inventory  2 Sources  3 Updates (soon)  4 Doctor (soon)
Global inventory  not scanned                                                   │ Details  no selection
────────────────────────────────────────────────────────────────────────────────│ ─────────────────────────────────────
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                        ⌕                                       │                   ·
                                                                                │
                            No installed skills found                           │            Nothing to show
                                                                                │
   Skilled has not scanned any installation root yet. Register a local source   │       Identity, provenance, and
           in Sources to prepare for installation in a later release.           │  installation paths appear here once
                                                                                │    installation inventory exists.
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
                                                                                │
 2 Sources   s Settings   q Quit
