tests/snapshots/tui_snapshots__scan_installations_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
expression: "render(&app, 80, 24)"
---
 ◆ skilled   global                                         ● setup in progress
 Setup · Scan installations   navigation is locked during setup
  ┌ First-run setup ───────────────────────────────────── global skills only ┐
  │                                                                          │
  │  ✓━━━━━━━━━ ✓━━━━━━━━ ✓━━━━━━━━ ✓━━━━━━━━ ✓━━━━━━━━ ●━━━━━━━━ ○────────  │
  │  STEP 6 / 7                                                              │
  │  Scan installations                                                      │
  │                                                                          │
  │  - installation roots not scanned                                        │
  │                                                                          │
  │  This build cannot report installation or Doctor status.                 │
  │  Continue without reading or changing any agent skill root.              │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Setup is persisted when it finishes          Esc Back   Enter Continue  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
 Enter Continue   Esc Back   ? Help   q Quit
